prevent titles from being hidden under header

--- a/themes/2017/assets/sass/base/_typography.scss
+++ b/themes/2017/assets/sass/base/_typography.scss
@@ -16,6 +16,15 @@ h1, h2, h3, h4, h5 {
     a, a:visited { color: $headings-color; }
 }
 
+h1:before, h2:before, h3:before, h4:before, h5:before, h6:before {
+    display: block;
+    content: '';
+    height: 150px;
+    margin-top: -150px;
+    visibility: hidden;
+    content: '';
+}
+
 h1, h2, h3 , h4 {
     margin: 0;
 
